docs/.vuepress/styles/custom.scss
:root {
	// accent colors
	--vp-c-accent: blue;
}

[data-theme='dark'] {
	// brand colors
	--vp-c-accent: rgb(99, 99, 253);
}

// Custom styles
.sandbox {
	.page-meta {
		display: none;
	}

	[vp-content] {
		max-width: unset;
	}
}

.sandbox-code {
	font-size: 40px;
	font-family: var(--code-font-family);
	width: min-content;
}

// For user testing
.user-study .vp-navbar,
.presentation .vp-navbar {
	display: none;
}

.presentation .vp-page {
	padding: 0px;
}

